--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Heading 2</h2>
     </main>
     <footer>
-        <h2>Heading 2</h2>
+        <h2>Footer</h2>
     </footer>
 </body>
 </html>
