nav bar added to header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <header>
         <h1>Heading</h1>
+        <nav>
+            <ul class="navigation-bar" id="navigation-bar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="breakfast-recipes.html">Breakfast Recipies</a></li>
+                <li><a href="lunch-recipies.html">Lunch Recipies</a></li>
+                <li><a href="dinner-recipies.html">Dinner Recipies</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h2>Heading 2</h2>
