imported fonts for title and main element paragraphss and also centered nav bar

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Healthy Recipies</title>
 </head>
+
 <body>
     <header>
         <h1>Heading</h1>
@@ -19,10 +21,15 @@
         </nav>
     </header>
     <main>
-        <h2>Heading 2</h2>
+        <section>
+            <h2>Heading 2</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
+        </section>
     </main>
     <footer>
         <h2>Footer</h2>
     </footer>
 </body>
+
 </html>
