--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Healthy Recipies</title>
+    <title>Healthy Cooking Made Simple!</title>
 </head>
 
 <body>
     <header>
-        <h1>Heading</h1>
+        <h1>Healthy Cooking Made Simple!</h1>
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html">Home</a></li>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section>
-            <h2>Heading 2</h2>
+            <h2>Welcome!</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
                 iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
         </section>
