aside sections added to main body for a more responsive design

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
                 iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
         </section>
+
+        <aside>
+                <h2>Welcome!</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
+        </aside>
+        <aside>
+            <h2>Welcome!</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
+    </aside>
     </main>
     <footer>
         <h2>Footer</h2>
