--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Healthy Cooking Made Simple!</h1>
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="breakfast-recipes.html">Breakfast Recipies</a></li>
                 <li><a href="lunch-recipies.html">Lunch Recipies</a></li>
                 <li><a href="dinner-recipies.html">Dinner Recipies</a></li>
