started process to make nav bar more responsive for mobiles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Healthy Cooking Made Simple!</h1>
+        <li><a href="index.html" class="active"><h1>Healthy Cooking Made Simple!</h1></a></li>
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html" class="active">Home</a></li>
