--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
     <title>Healthy Cooking Made Simple!</title>
 </head>
 
 <body>
     <header>
         <li><a href="index.html" class="active"><h1>Healthy Cooking Made Simple!</h1></a></li>
+        <input type="checkbox" id="nav-dropdown-toggle" name="nav-dropdown-toggle">
+        <label for="nav-dropdown-toggle" class="nav-dropdown-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html" class="active">Home</a></li>
