font weight changed for nav links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <li><a href="index.html" class="active"><h1>Healthy Cooking Made Simple!</h1></a></li>
+        <li><a href="index.html" class="active" id="title-logo"><h1>Healthy Cooking Made Simple!</h1></a></li>
         <input type="checkbox" id="nav-dropdown-toggle" name="nav-dropdown-toggle">
         <label for="nav-dropdown-toggle" class="nav-dropdown-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
