changed minimus height of header

--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Welcome!</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
-        </section>
-
-        <aside>
+        <div class="main-content" id="main-content">
+            <section>
+                <h2>Welcome!</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
+            </section>
+    
+            <aside>
+                    <h2>Welcome!</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
+            </aside>
+            <aside>
                 <h2>Welcome!</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
                     iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
         </aside>
-        <aside>
-            <h2>Welcome!</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
-    </aside>
+        </div>
     </main>
     <footer>
         <h2>Footer</h2>
