borders added to header, nav and sections

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
                     iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
         </aside>
+
+        <section>
+            <h2 class="newsletter">Sign up to our newsletter!</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
+        </section>
         </div>
     </main>
     <footer>
