added hero image to main section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </nav>
     </header>
     <main>
+        <section class="hero-image">
+            
+        </section>
         <div class="main-content" id="main-content">
             <section>
                 <h2>Welcome!</h2>
@@ -31,7 +34,8 @@
                     iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
             </section>
     
-            <aside>
+            <div class="aside-columns">
+                <aside>
                     <h2>Welcome!</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
                         iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
@@ -41,6 +45,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
                     iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
         </aside>
+            </div>
 
         <section>
             <h2 class="newsletter">Sign up to our newsletter!</h2>
