added text section to hero image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <li><a href="index.html" class="active" id="title-logo"><h1>Healthy Cooking Made Simple!</h1></a></li>
+        <li><a href="index.html" class="active" id="title-logo">
+                <h1>Healthy Cooking Made Simple!</h1>
+            </a></li>
         <input type="checkbox" id="nav-dropdown-toggle" name="nav-dropdown-toggle">
         <label for="nav-dropdown-toggle" class="nav-dropdown-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -25,33 +27,37 @@
     </header>
     <main>
         <section class="hero-image">
-            
-        </section>
-        <div class="main-content" id="main-content">
-            <section>
+            <div class="cover-text">
                 <h2>Welcome!</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
+                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.
+                </p>
             </section>
-    
+        </section>
+        <div class="main-content" id="main-content">
             <div class="aside-columns">
                 <aside>
                     <h2>Welcome!</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
-            </aside>
-            <aside>
-                <h2>Welcome!</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
-        </aside>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
+                        Ipsa
+                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
+                        soluta.</p>
+                </aside>
+                <aside>
+                    <h2>Welcome!</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
+                        Ipsa
+                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
+                        soluta.</p>
+                </aside>
             </div>
 
-        <section>
-            <h2 class="newsletter">Sign up to our newsletter!</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.</p>
-        </section>
+            <section>
+                <h2 class="newsletter">Sign up to our newsletter!</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.
+                </p>
+            </section>
         </div>
     </main>
     <footer>
