changed height to hero image and cover text styles

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <section class="hero-image">
             <div class="cover-text">
                 <h2>Welcome!</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.
+                <p>Hello and welcome to Healthy Cooking Made Simple! This is a website designed to help you eat better
+                    without having to make difficult dishes. Our recipes have been resourced from across the web and we
+                    hope you enjoy them.
                 </p>
-            </section>
+        </section>
         </section>
         <div class="main-content" id="main-content">
             <div class="aside-columns">
