placeholder headings for sections replaced

--- a/index.html
+++ b/index.html
@@ -36,16 +36,19 @@
         </section>
         </section>
         <div class="main-content" id="main-content">
+            <section>
+                <h2 class="resources">Resources</h2>
+            </section>
             <div class="aside-columns">
                 <aside>
-                    <h2>Welcome!</h2>
+                    <h2>Essentials</h2></a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
                         Ipsa
                         iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
                         soluta.</p>
                 </aside>
                 <aside>
-                    <h2>Welcome!</h2>
+                    <h2>Top Tips</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
                         Ipsa
                         iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
