image added to aside section

--- a/index.html
+++ b/index.html
@@ -36,32 +36,47 @@
         </section>
         </section>
         <div class="main-content" id="main-content">
-            <section>
-                <h2 class="resources">Resources</h2>
-            </section>
-            <div class="aside-columns">
-                <aside>
-                    <h2>Essentials</h2></a>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
-                        Ipsa
-                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
-                        soluta.</p>
-                </aside>
-                <aside>
-                    <h2>Top Tips</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
-                        Ipsa
-                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
-                        soluta.</p>
-                </aside>
+            <div class="resources-container">
+                <section>
+                    <h2 class="resources">Resources</h2>
+                </section>
+                <div class="aside-columns">
+                    <aside class="essentials">
+                        <h2>Essentials</h2>
+                        <ul>
+                            <li>Non-stick pans</li>
+                            <li> Mixing bowls</li>
+                            <li>Measuring spoons</li>
+                            <li> Wooden spoons</li>
+                            <li>Knife block with a variety of sizes</li>
+                            <li>Rolling pin</li>
+                            <li>Small, Medium and large oven proof dishes</li>
+                            <li>Baking sheets</li>
+                            <li>Tin foil</li>
+                        </ul>
+                    </aside>
+    
+                    <div class="top-tips-image">
+                        <aside class="aside-image">
+                            <img src="assets/images/ba-basics-pans-knives-spoons-tools.webp" alt="cutting board with cooking equipment on it.">
+                        </aside>
+                        <aside class="top-tips">
+                            <h2>Top Tips</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
+                                Ipsa
+                                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
+                                soluta.</p>
+                        </aside>
+                    </div>
+                </div>
+    
+                <section>
+                    <h2 class="newsletter">Sign up to our newsletter!</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
+                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.
+                    </p>
+                </section>
             </div>
-
-            <section>
-                <h2 class="newsletter">Sign up to our newsletter!</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                    iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.
-                </p>
-            </section>
         </div>
     </main>
     <footer>
