styled image to be repsonsive on all devices

--- a/index.html
+++ b/index.html
@@ -45,35 +45,39 @@
                         <h2>Essentials</h2>
                         <ul>
                             <li>Non-stick pans</li>
-                            <li> Mixing bowls</li>
+                            <li>Mixing bowls</li>
                             <li>Measuring spoons</li>
-                            <li> Wooden spoons</li>
+                            <li>Wooden spoons</li>
                             <li>Knife block with a variety of sizes</li>
                             <li>Rolling pin</li>
                             <li>Small, Medium and large oven proof dishes</li>
                             <li>Baking sheets</li>
                             <li>Tin foil</li>
+                            <li>Blender (handheld will do)</li>
                         </ul>
                     </aside>
-    
+
                     <div class="top-tips-image">
                         <aside class="aside-image">
-                            <img src="assets/images/ba-basics-pans-knives-spoons-tools.webp" alt="cutting board with cooking equipment on it.">
+                            <img src="assets/images/ba-basics-pans-knives-spoons-tools.jpeg"
+                                alt="cutting board with cooking equipment on it.">
                         </aside>
                         <aside class="top-tips">
                             <h2>Top Tips</h2>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
-                                Ipsa
-                                iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
-                                soluta.</p>
+                            <p>The biggest tip that we can offer you is to calm yourself down before cooking and follow
+                                the steps carefully. Anyhting is possible in the kitchen when everything is done as it
+                                is supposed to be. Given that you've got the correct equipment to follow the recipes;
+                                the final result should be as delicious as you anticipated. Good Luck!</p>
                         </aside>
                     </div>
                 </div>
-    
+
                 <section>
                     <h2 class="newsletter">Sign up to our newsletter!</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum. Ipsa
-                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi soluta.
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab, saepe vitae cum ut harum.
+                        Ipsa
+                        iste pariatur perferendis nulla! Pariatur, quas et. Commodi odit ab facere, incidunt modi
+                        soluta.
                     </p>
                 </section>
             </div>
