links added to footer to direct people to our social media pages

--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
         </div>
     </main>
     <footer>
-        <h2>Footer</h2>
+        <ul>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
     </footer>
 </body>
 
