--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
         </div>
     </main>
     <footer>
-        <ul>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        <ul id="social-media-links">
+            <li class="social-media"><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li class="social-media"><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li class="social-media"><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
         </ul>
     </footer>
 </body>
