--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                                 <table>
                                     <tr>
                                         <td><label class="sign-up-label">Foreame:</label></td>
-                                        <td><input type="text" class="bars" id="first-name" name="first-name"></td>
+                                        <td><input type="text" class="bars" id="first-name" name="first-name" placeholder="Forename"></td>
                                     </tr>
                                     <tr>
                                         <td><label class="sign-up-label">Surname:</label></td>
-                                        <td><input type="text" class="bars" id="surname" name="surname"></td>
+                                        <td><input type="text" class="bars" id="surname" name="surname" placeholder="Surname"></td>
                                     </tr>
                                     <tr>
                                         <td><label class="sign-up-label">Email:</label></td>
-                                        <td><input type="email" class="bars" id="email" name="email"></td>
+                                        <td><input type="email" class="bars" id="email" name="email" placeholder="Email"></td>
                                     </tr>
                                 </table>
                             </div>
@@ -113,9 +113,9 @@
                                     </tr>
                                 </table>
                             </div>
-                        </div>
-                        <div class="newsletter-button">
-                            <input type="submit" class="newsletter-sign-up" value="Sign Up!">
+                            <div class="newsletter-button">
+                                <input type="submit" class="newsletter-sign-up" value="Sign Up!">
+                            </div>
                         </div>
                     </form>
 
