added further styles to the form button to look more aesthetically pleasing

--- a/index.html
+++ b/index.html
@@ -75,24 +75,30 @@
                 <section class="newsletter-form">
                     <h2 id="sign-up-heading">Sign up to our newsletter!</h2>
                     <form method="POST" action="https://formdump.codeinstitute.net" id="newsletter-form">
+                        <p>Why not sign up to our newsletter for updates on the latest recipes being added to our site,
+                            we'll also offer tips and tricks to make the cooking process easier and the occasional give
+                            away for cooking equipment and devices.</p>
                         <div class="newsletter">
                             <div class="newsletter-input">
                                 <table>
                                     <tr>
                                         <td><label class="sign-up-label">Foreame:</label></td>
-                                        <td><input type="text" class="bars" id="first-name" name="first-name" placeholder="Forename"></td>
+                                        <td><input type="text" class="bars" id="first-name" name="first-name"
+                                                placeholder="Forename"></td>
                                     </tr>
                                     <tr>
                                         <td><label class="sign-up-label">Surname:</label></td>
-                                        <td><input type="text" class="bars" id="surname" name="surname" placeholder="Surname"></td>
+                                        <td><input type="text" class="bars" id="surname" name="surname"
+                                                placeholder="Surname"></td>
                                     </tr>
                                     <tr>
                                         <td><label class="sign-up-label">Email:</label></td>
-                                        <td><input type="email" class="bars" id="email" name="email" placeholder="Email"></td>
+                                        <td><input type="email" class="bars" id="email" name="email"
+                                                placeholder="Email"></td>
                                     </tr>
                                 </table>
                             </div>
-                         
+
                             <div class="newsletter-radio">
                                 <table>
                                     <tr>
@@ -113,12 +119,11 @@
                                     </tr>
                                 </table>
                             </div>
-                            <div class="newsletter-button">
-                                <input type="submit" class="newsletter-sign-up" value="Sign Up!">
-                            </div>
                         </div>
                     </form>
-
+                    <div class="newsletter-button">
+                        <input type="submit" class="newsletter-sign-up" value="Sign Up!">
+                    </div>
                 </section>
             </div>
         </div>
